@@ -279,6 +279,7 @@ Note that, each object should have unique <ObjectName>.
      * Min              : min value
      * Max              : max value
      * Constant         : set to TRUE to have a fixed norm factor
+     * Expression       : a way to correlate this norm factor with other norm factors (using AddPreprocessFunction); two argments, in the form "<expression>,<dependency>", where <dependency> should contain the name(s) of the norm factor the expression depends on [example: "1.-SigXsecOverSM","SigXsecOverSM"]
 
   * ShapeFactor:
      * Samples          : comma-separated list of samples on which to apply the shape factor
