@@ -24,6 +24,8 @@ public:
 
     std::vector<std::string> fRegions;
     std::vector<std::string> fExclude;
+    
+    std::pair<std::string,std::string> fExpression;
 };
 
 #endif
