@@ -1,3 +1,7 @@
+2018-02-28 Michele Pinamonti <michele.pinamonti@gmail.com>
+    * Fixed random crashes caused by recent commits (thanks Tomas)
+    * Added "Expression" option for NormFactors, which allows to correlate different norm factors in a custom way (see README)
+
 2018-02-20 Alexander Held <alexander.held@cern.ch>
     * Changed EOL characters in TtHFit.C to unix-style
     * Updated ConfigParser.C to use StatusLogbook
